--- a/package.json
+++ b/package.json
@@ -8,16 +8,27 @@
     "start": "node app.js",
     "start:dev": "nodemon app.js",
     "load:users": "node src/mongo-fixtures/load-users.js",
-    "load:categories": "node src/mongo-fixtures/load-categories.js"
+    "load:categories": "node src/mongo-fixtures/load-categories.js",
+    "lint": "eslint ./**/*.js app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
+    "@sendgrid/mail": "^6.4.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.0.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
+    "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.6.7"
+    "mongoose": "^5.6.7",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
+    "nunjucks": "^3.2.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
