--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT = 3000
 DATABASE_URL = mongodb+srv://yuriy_90:121790yura@clusterdb2internship-8gkox.mongodb.net/test?retryWrites=true&w=majority
 TOKEN_SECRET = secret121790
 SENDGRID_API_KEY = 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
+
+AWS_ID = 
+AWS_SECRET = 
+S3_BUKET_NAME = 
