--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.1.0",
+    "@koa/cors": "^3.0.0",
     "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
