--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "eslint-plugin-import": "^2.18.2",
     "node-mongodb-fixtures": "^3.0.7",
     "nodemon": "^1.19.1"
+  },
+  "engines":{
+    "node": "8.11.3"
   }
+
 }
