--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DATABASE_URL = mongodb+srv://yuriy_90:121790yura@clusterdb2internship-8gkox.mong
 TOKEN_SECRET = secret121790
 SENDGRID_API_KEY = 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
 
-AWS_ID = 
-AWS_SECRET = 
-S3_BUKET_NAME = 
+AWS_ID = AKIAZX7ILIGBRNMLJSO6
+AWS_SECRET = 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
+S3_BUKET_NAME = ravinskymyfixer
