--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hapi/joi": "^15.1.0",
     "@koa/cors": "^3.0.0",
     "@sendgrid/mail": "^6.4.0",
+    "aws-sdk": "^2.517.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
